# ocr-apps

./: .clang-format  .gitignore  README.md
apps/: LICENSE  README  affinity.cpp  apps_env.bash  barrier.c  color.h  etc.cpp  low_degree.cpp  main.cpp  makefiles  ocr-wrapper.sh  run_ms_bs_loadbalance.sh  simd.cpp  statistics.cpp  util_new.h
apps/BareBonesFFT/: helper.c  parallel.c  parallel.h  serial.c  serial.h  x86_helper.c  x86_parallel.c  x86_parallel.h  x86_serial.c  x86_serial.h
apps/CoMD/: README  README.txt  parameters.proposed  run.proposed
apps/Graph_BFS/: Converting an X86 HTA BFS to Scratchpad.docx  PenAndPaperBFS.docx  README
apps/RSBench/: README  parameters.proposed  run.proposed
apps/ScratchPad_shuffle/: shuffle.cpp  shuffle_ds.h  shuffle_impl.h
apps/XSBench/: README  parameters.proposed  run.proposed
apps/autoocr/: .gitignore  Makefile  Makefile.common  README.txt
apps/butterfly/: .firstmerge.c  .mid_parallelization_state_save.c  .parallel.a_little_broken.c  .parallel.c.start  .parallel.h.start  FFT.h  Makefile  README  dataset.h  helper.c  parallel.c  parallel.h  serial.c  serial.h  test.c
apps/c-graph500/: Makefile  Makefile.asmonly  Makefile_graph_500  Makefile_orig  README  README-ORIG  clean-cg-B125MR1G.cfg  graph500-ddf.hc  graph500-phaser.hc  graph500.c  graph500.h  graph500.hc  graph500_version1.c  options.h  rose_graph500-ddf.c  sample.cfg  tags  verify.h
apps/cholesky/: README  cholesky_out_200.txt  cholesky_out_300.txt  m_400.in  ocr
apps/cnc-hpgmg/: README.md
apps/crlibm-1.0beta4/: LICENSE  RAG-clobber.sh  RAG-install.sh
apps/examples/: .gitignore
apps/fake_fftw/: Makefile.afl  Makefile.sim  README  fftw-with-newlib.ld  fftw.c  fftw.cfg  fftw3.c
apps/fft/: ocr  ompss
apps/fibonacci/: ocr
apps/graph500/: Makefile.tg  Makefile.x86-base  README  config.cfg  graph500.c  graph500.cpp  qsort.c
apps/hpgmg-rocr/: README.md
apps/jenkins/: apps_all.py  apps_init.py  apps_jobtypes.py  apps_kernels.py  apps_proxies.py  apps_sub_all.py
apps/legacy/: .gitignore  README.legacy
apps/libs/src/newlib/newlib-2.1.0/newlib/libc/sys/ocr/: Makefile.am  Makefile.in  _ansi.h  _exit.c  configure  configure.in  errno.c  fini.c  gettod.c  init.c  inode.c  io.c  isatty.c  malloc.c  mallocr.c  ocr_shim.c  ocr_shim.h  process.c  sysconf.c  times.c  wait.c  weaks.c
apps/libs/src/newlib/newlib-2.1.0/newlib/libc/sys/ocr/machine/: Makefile.in  configure  configure.in
apps/libs/src/newlib/newlib-2.1.0/newlib/libc/sys/ocr/machine/x86_64/: Makefile.am  Makefile.in  configure  configure.in  crt0.c
apps/libs/src/newlib/newlib-2.1.0/newlib/libc/sys/ocr/machine/xstg/: Makefile.am  Makefile.in  configure.in  crt0.c  crt0.s.sav  crtend.c
apps/libs/src/newlib/newlib-2.1.0/newlib/libc/sys/ocr/sys/: _types.h  features.h  ocr.h  tgr.h  types.h
apps/libs/src/newlib/newlib-2.1.0/newlib/libc/sys/tgr/machine/: Makefile.am  configure.in
apps/libs/src/newlib/newlib-2.1.0/newlib/libc/sys/tgr/machine/x86_64/: Makefile.in  crt0.c
apps/libs/src/newlib/newlib-2.1.0/newlib/libc/sys/tgr/machine/x86_64/include/: lea.h  tls.h  types.h  user.h
apps/libs/src/newlib/newlib-2.1.0/newlib/libc/sys/tgr/machine/xstg/: Makefile.am  Makefile.in  crt0.c
apps/libs/src/newlib/newlib-2.1.0/newlib/libc/sys/tgr/machine/xstg/include/: lea.h  tls.h
apps/libs/src/newlib/newlib-2.1.0/newlib/libc/sys/tgr/pthread/: LICENSE  Makefile.am  Makefile.in  attr.c  barrier.c  cancel.c  condvar.c  config.h  getreent.c  internals.h  join.c  libc-symbols.h  lockfile.c  manager.c  mutex.c  posix-timer.h  pthread.c  restart.h  rwlock.c  semaphore.c  semaphore.h  specific.c  spinlock.c  thread_dbP.h  timer_create.c  timer_delete.c  timer_getoverr.c  timer_gettime.c  timer_routines.c  timer_settime.c  weaks.c
apps/libs/src/newlib/newlib-2.1.0/newlib/libc/sys/tgr/pthread/bits/: local_lim.h
apps/libs/src/newlib/newlib-2.1.0/newlib/libc/sys/tgr/pthread/machine/x86_64/: pt-machine.h
apps/libs/src/newlib/newlib-2.1.0/newlib/libc/sys/tgr/pthread/machine/xstg/: pt-machine.h  stackinfo.h
apps/lulesh2.0.2-cnc-intel/: ._lulesh_tuple.h  Makefile  README  lulesh-init.cc  lulesh-viz.cc  lulesh.cc  lulesh.h  lulesh_cnc.h
apps/makefiles/: make-fsim.inc  make-inc.inc  make-libs.inc  make-ocrrun.inc  make-pre.inc  make-regular.inc  make-rose.inc  make-select.inc  make-tg-xe.inc  make-tg.inc  make-varcheck.inc  make-x86.inc
apps/miniAMR/: LICENSE_LGPL.txt
apps/mpi-graph500/: Makefile  README  common.h  main.c  mpi_workarounds.h  run.sh  saveMakefile
apps/npbCG/: .gitignore  Makefile  README  cg_edt.c  cg_graph.c  cg_ocr.c  cg_ocr.h  la_ocr.h  main_edt.c  makea_ocr.c  util_ocr.c
apps/nqueens/: Changelog  README.md
apps/ocr-sar/: README.txt  fix-up-links.sh  rebuild-ocr-for-sar.sh
apps/omp-graph500/: Makefile  README  graph500.c  omp-csr.c
apps/printf/: ocr
apps/quicksort/: ocr
apps/ref-g500-2.1.4/: 2AFL.cfg  Makefile  Makefile.orig  README  afl-bones.c  clean-cg-B125MR1G.cfg  crappy-bones.c  graph500.c  make.inc  options.h
apps/rob-simplecodelet/: 1AFL.cfg  1stest.cfg  2blk.cfg  2stest.cfg  Makefile  stest.c
apps/roger-uts/: Makefile  Makefile.afl  Makefile.power  README  brg_endian.h  f_sim  out.map  uts-main.c  uts-main.cfg  uts.c  uts.h
apps/roger_gups/: rmd_libxe_normal.ld  rmd_newlib_normal.ld
apps/sar/: .gitignore
apps/skel/: ocr
apps/smithwaterman/: ocr
apps/spmd_extension_demo/: Makefile.x86  Makefile.x86-base  meta.cpp  meta.h  spmd.cpp  spmd.h  spmd_test.cpp
apps/stencil/: README
apps/stencil2d_spmd/: Makefile.x86-base  spmd_stencil2d.cpp
apps/tempest/: LICENSE
apps/tg-configs/: config-newlib-template.cfg  config-template.cfg
apps/uts-1.1/: Makefile  README  config.in  ctrk.h  dequeue.c  dequeue.h  dlist.c  dlist.h  j.sh  mpi_worksharing.c  mpi_workstealing.c  sample_trees.csh  stats.c  (+16 more)
git-hooks/: README  findBugs.py  pre-commit  prepare-commit-msg
include/: ocxxr-arena.hpp  ocxxr-core.hpp  ocxxr-cxx11-compat.hpp  ocxxr-main.hpp  ocxxr-relptr.hpp  ocxxr.hpp
jenkins/: apps_all.py  intel.ref  temp_dist.py  tg.ref  xstack_all.py
test/: test-all.sh
(+7677 files in other folders)
