dnl This is the newlib/libc/sys/ocr configure.in file.
dnl Process this file with autoconf to produce a configure script.

AC_PREREQ(2.59)
AC_INIT([newlib],[NEWLIB_VERSION])
AC_CONFIG_SRCDIR([environ.c])

dnl Can't be done in NEWLIB_CONFIGURE because that confuses automake.
AC_CONFIG_AUX_DIR(../../../..)

NEWLIB_CONFIGURE(../../..)

dnl We have to enable libtool after NEWLIB_CONFIGURE because if we try and
dnl add it into NEWLIB_CONFIGURE, executable tests are made before the first
dnl line of the macro which fail because appropriate LDFLAGS are not set.
_LT_DECL_SED
_LT_PROG_ECHO_BACKSLASH
AC_PROG_AWK

AC_CONFIG_SUBDIRS(machine)

CRT=
if test "x${machine_dir}" = "xxstg"; then
	CRT="crt0.o crt0t.o crtend.o"
else
	CRT="crt0.o"
fi

AC_SUBST(CRT)

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
