dnl This is the newlib/libc/sys configure.in file.
dnl Process this file with autoconf to produce a configure script.

AC_PREREQ(2.59)
AC_INIT([newlib],[NEWLIB_VERSION])
AC_CONFIG_SRCDIR([x86_64])

dnl Can't be done in NEWLIB_CONFIGURE because that confuses automake.
AC_CONFIG_AUX_DIR(../../../../..)

NEWLIB_CONFIGURE(../../../..)

dnl We have to enable libtool after NEWLIB_CONFIGURE because if we try and
dnl add it into NEWLIB_CONFIGURE, executable tests are made before the first
dnl line of the macro which fail because appropriate LDFLAGS are not set.
_LT_DECL_SED
_LT_PROG_ECHO_BACKSLASH

CRT=

if test -n "${machine_dir}"; then
  case ${machine_dir} in
	x86_64) AC_CONFIG_SUBDIRS(x86_64)
            CRT=crt0.o
            ;;
	xstg) AC_CONFIG_SUBDIRS(xstg)
          CRT="crt0.o crt0t.o crtend.o"
          ;;
  esac;
fi

AC_SUBST(CRT)

AM_CONDITIONAL(HAVE_MACHINE_DIR, test x${machine_dir} != x)

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
